feat(admin): 添加课程管理功能并优化系统配置
- 新增课程管理模块，包括课程列表、增删改查功能
- 实现报名审核流程和注册统计功能
- 配置后端应用UTF-8编码和连接池参数
- 重构前端路由结构，分离学生端和管理端
- 添加JWT学生身份验证支持
- 优化前端页面动画效果和样式设计
- 更新工作日志记录自动化流水线执行情况